@@ -1,5 +1,9 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2008-01-04)
+ * Fixed a crash which may happen if trying to select a subtitle but
+   the subtitle list was empty.
+
 (2008-01-03)
  * Now the GPL in English is in html too. From now on, all documents
    that smplayer have to load should be in html. This is because the
